# inverting-bellman

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
configs/: mountaincar-position.py  mountaincar-velocity.py  reacher.py  utils.py
envs/: env_dynamics.py  goals.py  mountaincar.py  reacher.py  reacher_utils.py  samplers.py  wrappers.py
eval/: aggregate_arch_sweep.py  track_wm.py  unseen_goals.py  unseen_goals_arch_sweep.py  value_iteration.py  world_model.py
plotting/: pqn.py  style.py  vi.py  wm.py
scripts/: architecture_sweep.py  make_paper_figures.py  mountaincar_wm_quiver.py  reacher_dynamics_and_rollouts.py  reacher_visualisation.py  unseen_tasks_bar.py
training/: pqn.py  pqn_utils.py  wm.py
